# CalculatorLibrary

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_calculator.py
.circleci/: config.yml
tests/: test_calculator.py
