[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculatorLibrary_Tuuli_TG"
version = "0.0.1"
authors = [
  { name="Tuuli TG", email="tuuli.k.toivanen@gmail.com" },
]
description = "A packaging tutorial"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TuuliTG/CalculatorLibrary/blob/main/calculator.py"